tests/valid/ListGenerator_Valid_11.whiley
public export method test():
    bool[] ls = [false; 2]
    assert ls[0] == false
    assert |ls| == 2
