tests/invalid/Array_Invalid_2.whiley
public export method test() :
    int x = a2[0]
